--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="yahoo-finance bg-white shadow-lg p-3">
         <header>
-            <h1 class="text-blue-600">Recomendação de Compra</h1>
+            <h1 class="text-blue-600">Previsão do Valor da ação</h1>
             <hr>
         </header>
 
